# streamlit_alpha

./: .gitignore  Home.py  pyproject.toml
.streamlit/: config.toml
components/: Navbar.py
pages/: Stocks_data.py  style.css
streamlit_alpha/: app.py
streamlit_alpha/pages/: home.py  stocks_data.py
streamlit_alpha/utils/: data_fetcher.py
utils/: data_fetcher.py  data_visualizer.py  displaying_data.py
