[tool.poetry]
name = "streamlit-alpha"
version = "0.0.1"
description = ""
authors = ["rookie <juan.diegoam@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
yfinance = "^0.2.37"
matplotlib = "^3.8.3"
mplfinance = "^0.12.10b0"
pysqlite3-binary = "0.5.2"

[tool.poetry.scripts]
start-app = "streamlit run ./streamlit_alpha/app.py"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
